# Architecture-Tversky-Most

./: .gitignore  README.md  basic_inf.py  main.py  pyproject.toml
modeling/: MHA.py  TverskyLayer.py  TverskyMHA.py  Xorz.py  decoder.py  mlp.py  model.py  zRMSNorm.py
true_tversky_modeling/: MHA.py  MLA.py  TverskyLayer.py  TverskyMHA.py  Xorz.py  decoder.py  model.py  zRMSNorm.py
utils/: jsonl_dataloader.py  trainutils.py
