[project]
name = "moed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "setuptools",
    "ninja",
    "packaging",
    "cut-cross-entropy",
    "datasets",
    "matplotlib",
    "numpy",
    "safetensors",
    "tensorboardx",
    "transformers",
    "flash-attn",
    "muon-optimizer",
    "wheel>=0.45.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
prerelease = "allow"
no-build-isolation-package = ["flash-attn"]
extra-index-url = ["https://download.pytorch.org/whl/cu130"]

[tool.uv.sources]
cut-cross-entropy = { git = "https://github.com/apple/ml-cross-entropy.git" }
muon-optimizer = { git = "https://github.com/CoffeeVampir3/NorMuon" }
